<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mood Player</string>
     <string name="youtube_api_demo">Mood Player</string>

    <string name="videowall_demo_name">Video Wall</string>
    <string name="standalone_player_demo_name">Standalone Player</string>
    <string name="playerview_demo_name">Simple PlayerView</string>
    <string name="fragment_demo_name">Simple PlayerFragment</string>
    <string name="player_controls_demo_name">Custom Player Controls</string>
    <string name="action_bar_demo_name">Overlay ActionBar Demo</string>
    <string name="fullscreen_demo_name">Custom Fullscreen Handling</string>
    <string name="intents_demo_name">YouTube App Launcher Intents</string>

    <string name="playerview_text">It`s time to play your mood!</string>
    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>

    <string name="demo_select">Please select a demo:</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_to">Skip To</string>
    <string name="seconds">secs</string>
    <string name="player_style">Player Style</string>
    <string name="def">Default</string>
    <string name="minimal">Minimal</string>
    <string name="chromeless">Chromeless</string>

    <string name="play_video">Play video</string>
    <string name="play_playlist">Play playlist</string>
    <string name="start_index">Start index</string>
    <string name="start_time">Start time (sec)</string>
    <string name="autoplay">Autoplay</string>
    <string name="lightbox_mode">Lightbox mode</string>

    <string name="intent_select">Please select an action:</string>
    <string name="intent_disabled">This intent is not supported with the currently installed version of YouTube.</string>
    <string name="youtube_not_installed">YouTube is not installed on this device.</string>

    <string name="fullscreen_tutorial">This is a demo which shows how to handle fullscreen behaviour. This activity has differents layouts for portrait, landscape and fullscreen. The user can enter fullscreen either by using the player controller or programmatically by the programmer (here using a button). If your activity does not have a landscape layout, you can choose to automatically enter fullscreen when the device is rotated to landscape orientation.</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>

    <string name="actionbar_tutorial">This is a demo which shows how to use the ActionBar as an overlay when the video is playing in fullscreen. The actionbar will automatically fade away along with the player controls when the video is being played in fullscreen. While not in fullscreen the Actionbar is visible and does not overlay any of the views.</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="mood2">Energetic</string>
    <string name="mood1">Calm</string>
    <string name="toptext">Let\'s play your mood!</string>
    <string name="playlistbutton">Get playlist</string>
    <string name="fdcheckbox">Face detection</string>
    <string name="fdtv">Please wait for the red rectangle, then make a sad face</string>
    <string name="fdbtn">Take sad picture</string>
    
</resources>
